cropper fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,7 +29,7 @@
     height: 100%;
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 80px;
     align-items: center;
   }
   .loading {
